...
            )
        }
    }
    val trailing: @Composable () -> Unit = {
        Row(horizontalArrangement = Arrangement.spacedBy(4.dp)) {
            IconButton(onClick = { onPageChange(currentPage + 1) }, enabled = enabled && currentPage < totalPages) {
                Icon(Icons.AutoMirrored.Outlined.KeyboardArrowRight, contentDescription = "Next Page")
            }
            IconButton(onClick = { onPageChange(totalPages) }, enabled = enabled && currentPage < totalPages) {
                Icon(Icons.AutoMirrored.Outlined.LastPage, contentDescription = "Last Page")
            }
        }
    }
...
